changes to clamp to prevent overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ font-family: 'Hind', sans-serif; (Used for everything else)*/
 body {
     margin: 0;
     padding: 0;
-    font-size: clamp(1.5rem, 2vw, 2.5rem);
+    font-size: clamp(1.5rem, 1vw, 2.5rem);
     background-color: rgba(18, 156, 184, 0.3);
     box-sizing: border-box;
     font-family: 'Hind', sans-serif;
@@ -29,6 +29,7 @@ header {
 
 #logo {
     width: 100%;
+    max-width: 300px;
 }
 
 /* Start page specifications */ 
@@ -43,7 +44,7 @@ h1, h2, #question {
 }
 
 h2 {
-    font-size: clamp(1.5rem, 2vw, 2rem);
+    font-size: clamp(1.5rem, 1vw, 2rem);
 }
 
 #instructions {
@@ -78,10 +79,10 @@ h2 {
 #gamearea {
     display: none;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     border: 2px solid #129cb8;
-    width: 70%;
-    height: 80vh;
+    width: 90%;
+    height: 75vh;
     margin: 0 auto;
 }
 
@@ -91,7 +92,6 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
     gap: 10%;
-    margin: 2%;
 }
 
 #score, #attempts {
@@ -100,12 +100,12 @@ h2 {
 
 #question {
     text-align: center;
-    margin: 5%;
+    margin: 2%;
 }
 
 #answers {
     margin: 5% auto;
-    width: 70%;
+    width: 90%;
     display: flex; 
     flex-direction: column;
     gap: 20px;
@@ -114,7 +114,8 @@ h2 {
 .options {
     border: 2px solid #357785;
     text-align: center;
-    padding: 2% 5%;    
+    padding: 2%;
+    font-size: clamp(1rem, 1vw, 2rem);
 }
 
 #congratulation {
@@ -152,15 +153,7 @@ h2 {
     background-color: #ed403b;
 }
 
-@media (max-width:1020px){
-    main {
-        /* display:flex;
-        flex-direction: column;
-        align-items: center; */
-        width: 100%;
-        height: 80vh;
-    }
-
+@media (max-width:768px){
     header {
         margin-bottom: 5%;
     }
@@ -173,12 +166,12 @@ h2 {
         width: 95%;
     }
 
-    #play {
-        width: 50%;
+    #answers {
+        width: 90%;
     }
 
-    #gamearea {
-        width: 90%;
+    #play {
+        width: 50%;
     }
 
     #results {
